--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -5,33 +5,6 @@ html, body {
 body {
   font-size: 16px;
   background-color: $brand-primary;
-
-  &::after {
-    content: '';
-    position: absolute;
-    background-size: contain;
-    top: -50px;
-    left: 0;
-    right: 0;
-    height: 450px;
-    opacity: .035;
-    z-index: -1;
-  }
-
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    height: 100%;
-    height: 63.25vw;
-    max-height: 100vh;
-    /* background: linear-gradient( $brand-primary,rgba(0,0,50,0) 100%), */
-        /*        url(../images/homepage/hl4_edit.jpg); */
-    background-size: cover;
-    z-index: -1;
-  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -67,4 +40,26 @@ code {
 .wrapper {
   max-width: $max-site-width;
   margin: 0 auto;
+}
+
+.background-image{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    max-height: 100vh;
+    width:auto;
+}
+
+.background-homepage{
+    @extend .background-image;
+    background: linear-gradient( #121c44,rgba(0,0,50,0) 100%),url(../images/homepage/hl4_edit.jpg);
+    background-size: cover;
+}
+
+.background-normal{
+    @extend .background-image;
+    background: linear-gradient(rgba(0,0,50,0), #121c44 75%),url(../images/UCL.jpg);
 }
